<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andra.nostratest.SecondActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <EditText
        android:layout_below="@id/toolbar"
        android:id="@+id/edtOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:hint="@string/batas_awal"
        android:inputType="number" />

    <EditText
        android:layout_below="@id/toolbar"
        android:id="@+id/edtTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/edtOne"
        android:layout_toRightOf="@id/edtOne"
        android:hint="@string/batas_akhir"
        android:inputType="number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:onClick="createList"
        android:text="Hitung" />

    <ListView
        android:layout_below="@id/edtOne"
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
